# ldgr

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE.md  README.md  create-comp.sh  make.sh
.github/workflows/: tests.yml
3p/: common.cmake
3p/abseil/: targets.cmake
3p/boost/: targets.cmake
3p/fmtlib/: targets.cmake
3p/gtest/: targets.cmake
3p/libuv/: targets.cmake
3p/mbedtls/: targets.cmake
3p/pybind11/: targets.cmake
3p/sx/: targets.cmake
3p/type_safe/: targets.cmake
3p/zlib/: targets.cmake
cmake/: helpers.cmake  prepare.cmake  utils.cmake
doc/: Doxyfile.in
include/ldgr/: fmtutil.hpp  logentry.hpp  logger.hpp  logseverity.hpp  logsink.hpp
py/: msggen.py
src/ldgr/: fmtutil.cpp  logentry.cpp  logger.cpp  logseverity.cpp  logsink.cpp
tests/: tmain.cpp
tests/ldgr/: fmtutil.cpp  logentry.cpp  logger.cpp  logseverity.cpp  logsink.cpp  test.hpp
